<resources>
    <string name="app_name">LanguageInterviewQ</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="admob_inter_id">
        ca-app-pub-3844199791512298/4796060288</string>
    <string name="app_id"> ca-app-pub-3844199791512298~6668966030</string>
    <string name="don_t_have_an_account_signup">Do not have an account? Signup</string>
    <string name="login">Login</string>
    <string name="forgetpassword">ForgetPassword ?</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="login_title">Login</string>
    <string name="conformpassword">ConformPassword</string>
    <string name="signup">SignUp</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="enter_password_sign">Enter Password</string>
    <string name="enter_email_sign">Enter Email</string>
    <string name="enter_username_sign">Enter Username</string>
    <string name="signup_title">Signup</string>
    <string name="difference_between_jdk_jre_and_jvm">Q5:What is the current version of JDK and difference between JDK JRE and JVM ?</string>
    <string name="oop_concept">Object oriented programming is a methodology to design a program using classes and objects.\n\tIn other words we can say that OOPs is a fundamental programming concept which developers use for binding the data and function together using the concept of classes and objects.\n\tThe main features of OOPs are given below:\n\t\t1) Encapsulation\n\t\t2) Inheritance\n\t\t3) Polymorphism\n\t\t4) Abstraction</string>
    <string name="q1_what_is_oops_and_what_are_the_main_features_of_oops">Q1:What is OOPs and what are the main features of OOPs?</string>
    <string name="q2_what_is_an_object_and_class">Q2:What is an object and Class ?</string>
    <string name="class_and_object"> CLASS:  Class is prototype that consist of object in different states and behaviour .\nIt has number of methods that are common the object present within that class.\nClass is a user -defined blueprint from which object are created. \nA class is a logical entity.\nA class does not take memory space when created. A class bind data and method together into a single unit.\n\nOBJECT: An object is a real world entity . \nDifferent objects have different states or attributes and behaviour. examples cars ,dog ,man etc. \nAn object is a real-world entity which is an instance of a class .\nAn object like a variable of the class and object is a physical entity .\nAn object take memory space when it is created.</string>
    <string name="q3_what_is_java">Q3:What is Java and Java programming language is named java why ?</string>
    <string name="Java_detail">Java is a programming language and a platform. Java is a high level, robust, object-oriented and secure programming language.\n Java was developed by James Gosling, who is known as the father of Java, in 1995. James Gosling and his team members started the project in the early \'90s.\n  Currently, Java is used in internet programming, mobile devices, games, e-business solutions, etc. Following are given significant points that describe the history of Java.\n\n 1) James Gosling, Mike Sheridan, and Patrick Naughton initiated the Java language project in June 1991. The small team of sun engineers called Green Team.\n 2) Firstly, it was called "Green talk" by James Gosling, and the file extension was .gt.\n3) After that, it was called Oak and was developed as a part of the Green project.\nThe suggested words were "dynamic", "revolutionary", "Silk", "jolt", "DNA", etc. They wanted something that reflected the essence of the technology: revolutionary, dynamic, lively, cool, unique, and easy to spell, and fun to say.\n\t\tJava is an island in Indonesia where the first coffee was produced (called Java coffee). It is a kind of espresso bean.Java name was chosen by James Gosling while having a cup of coffee nearby his office.\n\t\tIn 1995, Time magazine called Java one of the Ten Best Products of 1995.\nJDK 1.0 was released on January 23, 1996. After the first release of Java, there have been many additional features added to the language. Now Java is being used in Windows applications, Web applications, enterprise applications, mobile applications, cards, etc. Each new version adds new features in Java.</string>
    <string name="features_of_java">Q4: What is the features of Java?</string>
    <string name="features_java_detail"> The features of Java are also known as Java buzzwords.A list of the most important features of the Java language is given below.\nSimple:\n\tJava is very easy to learn, and its syntax is simple, clean and easy to understand. According to Sun Microsystems, Java language is a simple programming language because:\n\t\t1)Java has removed many complicated and rarely-used features, for example, explicit pointers, operator overloading, etc.\n\t\t2)There is no need to remove unreferenced objects because there is an Automatic Garbage Collection in Java.\n\nObject_Oriented:\n\tJava is an object-oriented programming language.In Java everything is represented in the form of Object accept the primitive datatype.\n\nPlatform-Independent:\n\tJava is platform independent becauseJava code can be executed on multiple platforms, for example, Windows, Linux, Sun Solaris, Mac/OS, etc. Java code is compiled by the compiler and converted into bytecode. This bytecode is a platform-independent code because it can be run on multiple platforms, i.e., Write Once and Run Anywhere (WORA).\n\nSecured:\n\tJava is best known for its security. With Java, we can develop virus-free systems. Java is secured because:\n\t\t1)No explicit pointer\n\t\t2)Java Programs run inside a virtual machine sandbox.\n\nRobust:\n\The English mining of Robust is strong.\n\t\t1)It uses strong memory management.\n\t\t2)There is a lack of pointers that avoids security problems.\n\t\t3)Java provides automatic garbage collection which runs on the Java Virtual Machine to get rid of objects which are not being used by a Java application anymore.\n\t\t4)There are exception handling and the type checking mechanism in Java. All these points make Java robust.
    \n\nPortable:\n\tJava is portable because it facilitates you to carry the Java bytecode to any platform. It does not require any implementation.\n\nHigh Performance:\n\tJava is faster than other traditional interpreted programming languages because Java bytecode is "close" to native code. It is still a little bit slower than a compiled language (e.g., C++). Java is an interpreted language that is why it is slower than compiled languages, e.g., C, C++, etc.</string>
   <string name="jvm_jre_jdk"> The current version of JDK is JDK 21.JDK 21 reached General Availability on 19 September 2023.\n\tDifference between JRE,JDK and JVM :\nJVM:\n\tJVM(Java VirtualMachine) is not physically exits.Basically JVM is a part of JRE(Java Runtime Environment).JVM convert byte code to the machine language.\n\n\t1) JVM execute the java program line by line,Therefore it is also known as an interpreter.\n\t2) JVM comes with JIT(Just-In-Time) compiler that convert java source code into byte code.\n\t3) JVM has a class loader,runtime data area,execution engine and libraries.\nThe JVM performs the following main tasks:\n \t\tLoads code\n\t\tVerifies code\n\t\tExecutes code\n\t\tProvides runtime environment\n\nJRE:\n\tJRE is an acronym for Java Runtime Environment. It is also written as Java RTE. The Java Runtime Environment is a set of software tools which are used for developing Java applications. It is used to provide the runtime environment.It is the implementation of JVM.\n\nJDK:\n\tJDK is an acronym for Java Development Kit.JDK is a complete software for building Java application using java programming language.\n\tThe JDK contains a private Java Virtual Machine (JVM) and a few other resources such as an interpreter/loader (java), a compiler (javac), an archiver (jar), a documentation generator (Javadoc), etc. to complete the development of a Java Application.</string>
   <string name="instance_local_static">INSTANCE VARIABLE:\nInstance variables are non-static variables and are defined in a class outside any methods.\nThese can be called by using the object of that class.\nAn instance variable is  a variable which has one copy per object .That means every object will have one copy of it.\nExample: Instance variable\n\tclass MyClass {\n\t\tint myVar;\n\t}\n\nLOCAL VARIABLE:\nLocal variables are variables defined within methods or blocks in a class. \nUnlike static or instance variables, local variables are not initialized by JVM with a default value. Hence, a local variable must be initialized before you try to use it.\nExample: Local variable\nclass MyClass {\n\tpublic int add{\n\t\tint a=4,b=6;\n\t\t return a+b;\n\t}\n\t}\n\nSTATIC VARIABLE:\nStatic variables ( class variables) uses the static keyword. Static variables ( class variables) are declared within a class and outside all methods\nExample: Static variable\n\tclass MyClass{\n\t\tstatic int myVar;\n\t} </string>
    <string name="what_is_instance_local">Q6:What is instance,local and static Variable?</string>
    <string name="java_interview_question">Java Interview Question</string>
    <string name="type_of_constructor_java">Q7:What is the Constructor and Type of Constructor?</string>
    <string name="constructor_detail_java">In java constructor is a special type of method which has the same name as class name and has no return type.\nIt is a special type of method which is used to initialize the object.\nEvery time an object is created using the new() keyword, at least one constructor is called.\nIt calls a default constructor if there is no constructor available in the class.\n\nThere are some rules defined for the constructor.\n\t1)Constructor name must be the same as its class name\n\t2)A Constructor must have no explicit return type\n\t3)A Java constructor cannot be abstract, static, final, and synchronized.\n\nThere are two types of constructors in Java:\n\t1)Default constructor (no-arg constructor)\n\t\tA constructor is called "Default Constructor" when it does not have any parameter.\nThe default constructor is used to provide the default values to the object like 0, null, etc., depending on the type.\n\nSyntax of default constructor:\n\tclass_name(){}\n\n\t2)Parameterized constructor:\n\n\tA constructor which has a specific number of parameters is called a parameterized constructor.\nThe parameterized constructor is used to provide different values to distinct objects. However, you can provide the same values also.\nSyntax of Parameterized constructor:\n\tclass_name(dataType var-name,dataType var-name ){}</string>
    <string name="q9_what_is_destructor">Q9:What is Destructor?</string>
    <string name="destructor_detail"> A destructor is a method that is automatically invoked when an object is destroyed.\n\tThe destructor also recovers the heap space that was allocated to the destroyed object, closes the files and database connections of the objects etc.</string>
    <string name="difference_between_function_and_constructor">Q10:What is the difference between function and constructor in java?</string>
</resources>